# BTC_Arb_System

./: .gitignore  AAd_SYMBOLS.txt  Cargo.toml  check_db.py
BTC_ARB/: Cargo.toml  TRADING_DATA.db
BTC_ARB/src/: main.rs
BTC_FUNDING/: Cargo.toml  FUNDING_DATA.db
BTC_FUNDING/src/: main.rs
src/: main copy.rs  main.rs
